ADD: 获取GB28181连接信息
