# docs/swagger.json
@@ -990,6 +990,55 @@
                 }
             }
         },
+        "/ipc/gb28181_info": {
+            "get": {
+                "description": "获取GB28181连接信息",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "IPC设备"
+                ],
+                "summary": "获取GB28181连接信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "访问token",
+                        "name": "Authorization",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "访问token",
+                        "name": "access_token",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "查询成功",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.HttpResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/ipc.GB28181Info"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/ipc/media/play": {
             "post": {
                 "description": "Ipc设备点播",
@@ -2950,6 +2999,32 @@
                 },
                 "zoom_speed": {
                     "type": "integer"
+                }
+            }
+        },
+        "ipc.GB28181Info": {
+            "type": "object",
+            "properties": {
+                "media_ip": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "realm": {
+                    "type": "string"
+                },
+                "serial": {
+                    "type": "string"
+                },
+                "sip_ip": {
+                    "type": "string"
+                },
+                "sip_mode": {
+                    "type": "string"
+                },
+                "sip_port": {
+                    "type": "string"
                 }
             }
         },
